# alpha-removal-cpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md
libraries/stb/: stb_impl.cpp
scripts/: run_tests.sh
src/: main.cpp
tests/: README.txt  test1.cpp
